load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

# ESM vitest config
js_library(
    name = "vitest.config.mjs",
    srcs = [
        "vitest.config.mjs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:node_modules/vitest",
        "//tools:vitest",
    ],
)

# CJS vitest config
js_library(
    name = "vitest.config.cjs",
    testonly = True,
    srcs = [
        "vitest.config.cjs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:node_modules/vitest",
        "//tools:vitest",
    ],
)
