"Bazel dependencies"

bazel_dep(name = "fremtind_rules_vitest", version = "0.0.0", dev_dependency = True)
local_path_override(
    module_name = "fremtind_rules_vitest",
    path = "../..",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.7.7", dev_dependency = True)
bazel_dep(name = "aspect_rules_js", version = "2.0.0", dev_dependency = True)

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")

bazel_dep(name = "rules_shell", version = "0.6.1")
