load("@fremtind_rules_vitest//vitest:defs.bzl", "vitest_test")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

vitest_test(
    name = "test",
    config = "vitest.config.mjs",
    data = ["index.test.js"],
    node_modules = "//:node_modules",
    target_compatible_with = select({
        # vitest does not find tests on Windows; it appears the fix in https://github.com/vitestjs/vitest/pull/9351
        # for discovering tests when they are symlinks does not work on Windows.
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)

vitest_test(
    name = "filter_test",
    args = [
        "index.test.js",
    ],
    config = "vitest.config.mjs",
    data = ["index.test.js"],
    node_modules = "//:node_modules",
)
