local_repository(
    name = "fremtind_rules_vitest",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

####################
# fremtind_rules_vitest setup #
####################
# Fetches the fremtind_rules_vitest dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.

load("@fremtind_rules_vitest//vitest:dependencies.bzl", "rules_vitest_dependencies")

rules_vitest_dependencies()

load("@aspect_rules_js//js:toolchains.bzl", "DEFAULT_NODE_VERSION", "rules_js_register_toolchains")

rules_js_register_toolchains(node_version = DEFAULT_NODE_VERSION)

load("@aspect_rules_js//npm:repositories.bzl", "npm_translate_lock")

npm_translate_lock(
    name = "npm",
    lifecycle_hooks = {},
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)

load("@npm//:repositories.bzl", "npm_repositories")

npm_repositories()
