load("@fremtind_rules_vitest//vitest:defs.bzl", "vitest_test")

# Case 1: auto_configure_reporters is True (the default) but dup reporters are not added
vitest_test(
    name = "case1_test",
    auto_configure_reporters = True,
    config = "vitest.config.mjs",
    data = [
        "index.js",
        "index.test.js",
    ],
    log_level = "debug",
    node_modules = "//:node_modules",
)

# Case 2: auto_configure_reporters is False
vitest_test(
    name = "case2_test",
    auto_configure_reporters = False,
    config = "vitest.config.mjs",
    data = [
        "index.js",
        "index.test.js",
    ],
    log_level = "debug",
    node_modules = "//:node_modules",
)
