load("@fremtind_rules_vitest//vitest:defs.bzl", "vitest_test")

# Case 1: auto_configure_test_sequencer is True (the default) so custom test sequencer will be overridden
vitest_test(
    name = "case1_test",
    auto_configure_test_sequencer = True,
    config = "vitest.config.mjs",
    data = [
        "index.js",
        "index.test.js",
        "index_2.test.js",
        "sequencer.mjs",
    ],
    log_level = "debug",
    node_modules = "//:node_modules",
    shard_count = 2,
)

# Case 2: auto_configure_test_sequencer is False so custom test sequencer will be used
vitest_test(
    name = "case2_test",
    auto_configure_test_sequencer = False,
    config = "vitest.config.mjs",
    data = [
        "index.js",
        "index.test.js",
        "index_2.test.js",
        "sequencer.mjs",
    ],
    log_level = "debug",
    node_modules = "//:node_modules",
    shard_count = 2,
)
