"""Shows how to write a custom Vitest snapshot resolver which customizes the snapshot directory.
"""

load("@fremtind_rules_vitest//vitest:defs.bzl", "vitest_test")

vitest_test(
    name = "test",
    config = "vitest.config.mjs",
    data = [
        "greetings.jsx",
        "greetings.test.jsx",
        "link.jsx",
        "link.test.jsx",
        "snapshot_resolver.mjs",
        "//:node_modules/react",
        "//example:node_modules/@vitejs/plugin-react",
        "//example:node_modules/react-test-renderer",
    ],
    node_modules = "//:node_modules",
    # To update snapshots run,
    #    bazel run //example/custom_snapshot_resolver:test_update_snapshots
    snapshots = "__my_snapshots__",
)
