"""Shows how to write a custom Vitest snapshot resolver which writes snapshots of individual files.

Requires that the snapshot files already exist.
"""

load("@fremtind_rules_vitest//vitest:defs.bzl", "vitest_test")

vitest_test(
    name = "test",
    config = "vitest.config.mjs",
    data = [
        "greetings.jsx",
        "greetings.test.jsx",
        "link.jsx",
        "link.test.jsx",
        "snapshot_resolver.mjs",
        "//:node_modules/react",
        "//example:node_modules/react-test-renderer",
    ],
    node_modules = "//:node_modules",
    # To update snapshots run,
    #    bazel run //example/custom_snapshot_resolver_files:test_update_snapshots
    snapshots = glob(["*.snap"]),
)
