load("@fremtind_rules_vitest//vitest:defs.bzl", "vitest_test")

vitest_test(
    name = "test",
    config = "vitest.config.mjs",
    data = [
        "index.js",
        "index.test.js",
        "package.json",
    ],
    node_modules = "//:node_modules",
    node_options = [
        "--experimental-vm-modules",
    ],
)
