load("@fremtind_rules_vitest//vitest:defs.bzl", "vitest_test")

vitest_test(
    name = "test",
    data = [
        "index.js",
        "index.test.js",
    ],
    node_modules = "//:node_modules",
)

vitest_test(
    name = "test_user_data",
    data = [
        "index.js",
        "index.test.js",
        # should be able to add vitest explicitly in data
        "//:node_modules/vitest",
    ],
    node_modules = "//:node_modules",
)

vitest_test(
    name = "js_config_test",
    config = "vitest.config.js",
    data = [
        "index.js",
        "index.test.js",
    ],
    node_modules = "//:node_modules",
)

vitest_test(
    name = "cjs_config_test",
    config = "vitest.config.cjs",
    data = [
        "index.js",
        "index.test.js",
    ],
    node_modules = "//:node_modules",
)

vitest_test(
    name = "mjs_config_test",
    config = "vitest.config.mjs",
    data = [
        "index.js",
        "index.test.js",
    ],
    node_modules = "//:node_modules",
)

vitest_test(
    name = "gen_config_test",
    config = "gen.config.mjs",
    data = [
        "index.js",
        "index.test.js",
    ],
    node_modules = "//:node_modules",
)

genrule(
    name = "gen_config",
    testonly = True,
    srcs = ["vitest.config.mjs"],
    outs = ["gen.config.mjs"],
    cmd = "cp $(location :vitest.config.mjs) \"$@\"",
)

vitest_test(
    name = "target_config_test",
    config = ":gen_config",
    data = [
        "index.js",
        "index.test.js",
    ],
    node_modules = "//:node_modules",
)

vitest_test(
    name = "other_target_config_test",
    config = "//vitest/tests/configs:basic",
    data = [
        "index.js",
        "index.test.js",
    ],
    node_modules = "//:node_modules",
)
