"""Shows how to setup vitest_test to update snapshots with a snapshots files list.
"""

load("@fremtind_rules_vitest//vitest:defs.bzl", "vitest_test")

vitest_test(
    name = "test",
    config = "vitest.config.mjs",
    data = [
        "greetings.jsx",
        "greetings.test.jsx",
        "link.jsx",
        "link.test.jsx",
        "//:node_modules/react",  # This is needed for vite to be able to render react elements - ESM bug?
        "//example:node_modules/@vitejs/plugin-react",
        "//example:node_modules/react-test-renderer",
    ],
    node_modules = "//:node_modules",
    # To update snapshots run,
    #    bazel run //example/snapshots_files:test_update_snapshots
    snapshots = glob(["__snapshots__/*.snap"]),
)
