load("@aspect_bazel_lib//lib:utils.bzl", bazel_lib_utils = "utils")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

exports_files([
    "vitest_config_template.mjs",
    "bazel_sequencer.mjs",
    "bazel_snapshot_resolver.mjs",
    "bazel_snapshot_reporter.cjs",
])

sh_binary(
    name = "merger",
    srcs = ["merger.sh"],
    visibility = ["//visibility:public"],
)

# keep
bzl_library(
    name = "vitest_test",
    srcs = ["vitest_test.bzl"],
    visibility = ["//vitest:__subpackages__"],
    deps = [
        "@aspect_bazel_lib//lib:copy_to_bin",
        "@aspect_rules_js//js:libs",
        "@bazel_skylib//lib:dicts",
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "maybe",
    srcs = ["maybe.bzl"],
    visibility = [
        "//:__pkg__",
        "//vitest:__subpackages__",
    ],
    deps = [
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ] + (["@bazel_tools//tools/build_defs/repo:cache.bzl"] if bazel_lib_utils.is_bazel_7_or_greater() else []),
)
