load("@aspect_rules_swc//swc:defs.bzl", "swc")
load("@fremtind_rules_vitest//vitest:defs.bzl", "vitest_test")

# The library
swc(
    name = "lib",
    srcs = glob(
        ["**/*.js"],
        exclude = [
            "**/**/*.test.js",
            "**/**/*.test.mjs",
        ],
    ),
    swcrc = "//:swcrc",
)

# The tests and dependency on the library being tested
swc(
    name = "tests",
    srcs = glob([
        "**/*.test.js",
        "**/*.test.mjs",
    ]),
    data = [":lib"],
    swcrc = "//:swcrc",
)

vitest_test(
    name = "test",
    config = "//:vitest.config",
    data = [":tests"],
    node_modules = "//:node_modules",
    target_compatible_with = select({
        # vitest does not find tests on Windows; it appears the fix in https://github.com/vitestjs/vitest/pull/9351
        # for discovering tests when they are symlinks does not work on Windows.
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)
